--- a/test/fixtures/earthquakes.yml
+++ b/test/fixtures/earthquakes.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  time: 2014-04-22 22:29:27
+  time: 2014-04-23 20:20:03
   latitude: 9.99
   longitude: 9.99
   depth: 9.99
@@ -15,9 +15,10 @@ one:
   usgs_ident: MyString
   updated: MyString
   place: MyString
+  event_type: MyString
 
 two:
-  time: 2014-04-22 22:29:27
+  time: 2014-04-23 20:20:03
   latitude: 9.99
   longitude: 9.99
   depth: 9.99
@@ -31,3 +32,4 @@ two:
   usgs_ident: MyString
   updated: MyString
   place: MyString
+  event_type: MyString
