--- a/config/database.yml
+++ b/config/database.yml
@@ -15,18 +15,18 @@ default: &default
   pool: 5
   username: root
   password:
-  host: localhost
+  socket: /tmp/mysql.sock
 
 development:
   <<: *default
-  database: earthquake_grapher_development
+  database: earthquake_mapper_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: earthquake_grapher_test
+  database: earthquake_mapper_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -49,6 +49,6 @@ test:
 #
 production:
   <<: *default
-  database: earthquake_grapher_production
-  username: earthquake_grapher
-  password: <%= ENV['EARTHQUAKE_GRAPHER_DATABASE_PASSWORD'] %>
+  database: earthquake_mapper_production
+  username: earthquake_mapper
+  password: <%= ENV['EARTHQUAKE_MAPPER_DATABASE_PASSWORD'] %>
